--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
-    "react-router": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -20,9 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,17 +37,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@storybook/addon-actions": "^6.0.21",
-    "@storybook/addon-essentials": "^6.0.21",
-    "@storybook/addon-links": "^6.0.21",
-    "@storybook/node-logger": "^6.0.21",
-    "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^6.0.21",
     "babel-loader": "^8.1.0",
-    "gh-pages": "^3.1.0",
-    "react-is": "^16.13.1",
-    "react-lifecycle-visualizer": "^2.2.9",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "gh-pages": "^3.1.0"
   },
   "guppy": {
     "id": "58a6c280-f392-11ea-8dd8-51c11a722ad1",
