--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-scroll": "^1.8.1"
+    "react-scroll": "^1.8.1",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
