--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
+    "react": "^18.2.0",
     "react-dom": "^16.13.1",
-    "react-router": "^5.2.0",
+    "react-router": "^6.14.2",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.1",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.2.3",
+    "redux-scripts": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
