--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "portfolio",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.2.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "node-sass": "^4.14.1",
     "react": "^18.2.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^18.2.0",
     "react-router": "^6.14.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.1",
     "redux-saga": "^1.2.3",
     "redux-scripts": "^3.3.1"
@@ -42,8 +38,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "babel-loader": "^8.1.0",
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "react-test-renderer": "^18.2.0",
+    "sass": "^1.67.0"
   },
   "guppy": {
     "id": "58a6c280-f392-11ea-8dd8-51c11a722ad1",
